fix overflow

--- a/styles/pages/overview-content.scss
+++ b/styles/pages/overview-content.scss
@@ -1,5 +1,5 @@
 .overview-content {
-	height: 100%;
+	height: calc(100% - 80px);
 	width: calc(100% - 250px);
 	position: absolute;
 	background-color: #124c93;
@@ -14,7 +14,7 @@
 		$margin-right: 0%;
 		position: fixed;
 		width: calc(100% - #{$margin-right} - #{$margin-left} - 250px);
-		height: calc(100% - #{$margin-top} - #{$margin-bottom} - 80px);
+		//height: calc(100% - 100px);//- #{$margin-top} - #{$margin-bottom} - 80px);
 		margin: 0 #{$margin-right} #{$margin-bottom} #{$margin-left};
 		padding-top: 2%;
 		.container {
@@ -25,7 +25,7 @@
 }
 
 .content-grid {
-	height: 100%;
+	height: calc(100% - 80px);
 	width: 100%;
 }
 
